{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 383,
  "lineage": "2064ae70-0274-01f7-8cc7-fc3cce724773",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "data-manager-eks-gw",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:852056369035:internet-gateway/igw-0ee1bf713e48c6583",
            "id": "igw-0ee1bf713e48c6583",
            "owner_id": "852056369035",
            "tags": {
              "Name": "data-manager-eks"
            },
            "tags_all": {
              "Name": "data-manager-eks"
            },
            "vpc_id": "vpc-0ef3cef198b6ae9f3"
          },
          "dependencies": [
            "module.eks.aws_vpc.data-manager-eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "data-manager-eks-rt",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:852056369035:route-table/rtb-0b2726b7512b71ca6",
            "id": "rtb-0b2726b7512b71ca6",
            "owner_id": "852056369035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee1bf713e48c6583",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef3cef198b6ae9f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_internet_gateway.data-manager-eks-gw",
            "module.eks.aws_vpc.data-manager-eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data-manager-eks-rta",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011cf0d4da5a0b05c",
            "route_table_id": "rtb-0b2726b7512b71ca6",
            "subnet_id": "subnet-044c28679f8edf1ab"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.data-manager-eks-gw",
            "module.eks.aws_route_table.data-manager-eks-rt",
            "module.eks.aws_subnet.data-manager-eks-subnet",
            "module.eks.aws_vpc.data-manager-eks-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2e871c9cd52b9d7",
            "route_table_id": "rtb-0b2726b7512b71ca6",
            "subnet_id": "subnet-0f525e0cc324175fc"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.data-manager-eks-gw",
            "module.eks.aws_route_table.data-manager-eks-rt",
            "module.eks.aws_subnet.data-manager-eks-subnet",
            "module.eks.aws_vpc.data-manager-eks-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data-manager-eks-nodegroup",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:852056369035:security-group/sg-07a7576972c68a97b",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a7576972c68a97b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0bd201d35189499b5"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd201d35189499b5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control      plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd201d35189499b5"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "data-manager-eks-node",
            "name_prefix": "",
            "owner_id": "852056369035",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "data-manager-eks-node",
              "kubernetes.io/cluster/data-manager-eks": "owned"
            },
            "tags_all": {
              "Name": "data-manager-eks-node",
              "kubernetes.io/cluster/data-manager-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef3cef198b6ae9f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.data-manager-eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_manager_eks_cluster_sg",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:852056369035:security-group/sg-0bd201d35189499b5",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd201d35189499b5",
            "ingress": [],
            "name": "data_manager_eks_cluster",
            "name_prefix": "",
            "owner_id": "852056369035",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "data_manager_eks_cluster"
            },
            "tags_all": {
              "Name": "data_manager_eks_cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef3cef198b6ae9f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.data-manager-eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "data-manager-eks-node-ingress-cluster",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control      plane",
            "from_port": 1025,
            "id": "sgrule-1569782980",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07a7576972c68a97b",
            "security_group_rule_id": "sgr-00e910b412adc7c01",
            "self": false,
            "source_security_group_id": "sg-0bd201d35189499b5",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.data-manager-eks-nodegroup",
            "module.eks.aws_security_group.data_manager_eks_cluster_sg",
            "module.eks.aws_vpc.data-manager-eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "data-manager-eks-node-ingress-self",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-537373855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07a7576972c68a97b",
            "security_group_rule_id": "sgr-0681904ed0f13584d",
            "self": false,
            "source_security_group_id": "sg-0bd201d35189499b5",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.data-manager-eks-nodegroup",
            "module.eks.aws_security_group.data_manager_eks_cluster_sg",
            "module.eks.aws_vpc.data-manager-eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "data_manager_eks_cluster_ingress_node_https",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3715464751",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07a7576972c68a97b",
            "security_group_rule_id": "sgr-064e5b41edeff90e3",
            "self": false,
            "source_security_group_id": "sg-0bd201d35189499b5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.data-manager-eks-nodegroup",
            "module.eks.aws_security_group.data_manager_eks_cluster_sg",
            "module.eks.aws_vpc.data-manager-eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-manager-eks-subnet",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:852056369035:subnet/subnet-044c28679f8edf1ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044c28679f8edf1ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "852056369035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-manager-eks-node",
              "kubernetes.io/cluster/data-manager-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "data-manager-eks-node",
              "kubernetes.io/cluster/data-manager-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ef3cef198b6ae9f3"
          },
          "dependencies": [
            "module.eks.aws_vpc.data-manager-eks-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:852056369035:subnet/subnet-0f525e0cc324175fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f525e0cc324175fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "852056369035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-manager-eks-node",
              "kubernetes.io/cluster/data-manager-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "data-manager-eks-node",
              "kubernetes.io/cluster/data-manager-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ef3cef198b6ae9f3"
          },
          "dependencies": [
            "module.eks.aws_vpc.data-manager-eks-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "data-manager-eks-vpc",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:852056369035:vpc/vpc-0ef3cef198b6ae9f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb2648be5845049c",
            "default_route_table_id": "rtb-0e295229dc71819fb",
            "default_security_group_id": "sg-0d2f3bf1b49d592bc",
            "dhcp_options_id": "dopt-284afb50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef3cef198b6ae9f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e295229dc71819fb",
            "owner_id": "852056369035",
            "tags": {
              "Name": "data-manager-eks-node",
              "kubernetes.io/cluster/data-manager-eks": "shared"
            },
            "tags_all": {
              "Name": "data-manager-eks-node",
              "kubernetes.io/cluster/data-manager-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}